basic type hints

--- a/tox.ini
+++ b/tox.ini
@@ -13,9 +13,9 @@ commands =
   coverage run
   coverage report
 
-# [testenv:typing]
-# deps =
-#   mypy
-#   mypy-extensions
-# commands =
-#   mypy
+[testenv:typing]
+deps =
+  mypy
+  mypy-extensions
+commands =
+  mypy
