--- a/setup.cfg
+++ b/setup.cfg
@@ -35,3 +35,9 @@ omit =
 [mypy]
 files = bayes_opt
 python_version = 3.8
+
+[mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-sklearn.*]
+ignore_missing_imports = True
